syntax = "proto3";
package stats.service.collector;

option java_package = "ru.practicum.ewm.grpc.stats.collector";

import "google/protobuf/empty.proto";

import "stats/messages/user_action.proto";

service UserActionController {
    rpc CollectUserAction (stats.message.action.UserActionProto)
        returns (google.protobuf.Empty);
}